# pkgguard

./: .gitignore  .pre-commit-hooks.yaml  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmark/: dataset.json  run_benchmark.py
examples/: chatgpt_answer.txt  github-action-usage.yml  package.json  requirements.txt
src/pkgguard/: __init__.py  _dates.py  cache.py  cli.py  engine.py  http.py  mcp_server.py  models.py
src/pkgguard/checks/: __init__.py  base.py  existence.py  fake_stars.py  github_meta.py  license.py  maintenance.py  malware.py  policy.py  popularity.py  source_scan.py  typosquat.py  vulnerabilities.py
src/pkgguard/data/: __init__.py  popular_npm.txt  popular_pypi.txt
src/pkgguard/github/: __init__.py  api.py
src/pkgguard/parse/: __init__.py  chat_text.py  detect.py  manifests.py  normalize.py  package_json.py  requirements.py
src/pkgguard/registry/: __init__.py  archives.py  crates.py  downloads.py  golang.py  more.py  npm.py  osv.py  pypi.py  rubygems.py
src/pkgguard/report/: __init__.py  aggregate.py  render_cli.py  render_json.py  render_md.py
tests/: test_aggregate.py  test_cache.py  test_improvements.py  test_license.py  test_offline.py  test_parse.py  test_parse_robustness.py  test_robustness_engine.py  test_source_scan.py  test_typosquat.py
