[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkgguard-cli"
version = "0.1.0"
description = "Vet the packages and repos your AI assistant recommended — before you install. Catches hallucinated/slopsquatted names, malware signals, license traps, dead repos, and fake-star inflation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MJ" }]
keywords = [
    "slopsquatting",
    "typosquatting",
    "hallucination",
    "supply-chain-security",
    "dependency-security",
    "llm",
    "ai-safety",
    "pypi",
    "npm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
# Core engine is stdlib-only: zero hard dependencies, no API keys required.
dependencies = []

[project.optional-dependencies]
# Prettier CLI tables/colors. pkgguard works without it (plain-text fallback).
rich = ["rich>=13.0"]
# MCP server so AI assistants can self-check a suggestion before emitting it.
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "rich>=13.0"]

[project.urls]
Homepage = "https://github.com/Highcrypto7/pkgguard"
Repository = "https://github.com/Highcrypto7/pkgguard"
Issues = "https://github.com/Highcrypto7/pkgguard/issues"

[project.scripts]
pkgguard = "pkgguard.cli:main"
pkgguard-mcp = "pkgguard.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pkgguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
